# normalizing-flows

./: .gitignore  LICENSE  pyproject.toml
normalizing_flows/data/: cifar.py
normalizing_flows/models/: backbones.py  flows.py
normalizing_flows/notebooks/: NF-VAE.ipynb  NICE-calibration.ipynb
